[metadata]
name = brotli-file
version = 0.1.0
url = https://github.com/youknowone/brotli-file
author = Jeong YunWon
author_email = brotlifile@youknowone.org
classifier =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
license = BSD 2-Clause License
license_file = LICENSE
description = 'Brotli file interface'
long_description = file: README.rst
keywords = brotli,file
[options]
py_modules = brotli_file
install_requires=
    brotli
[flake8]
ignore = E501
